--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-photo-gallery": "^8.0.0",
     "react-scripts": "3.1.0",
     "save": "^2.4.0",
     "semantic-ui-react": "^0.87.3"
