--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react": "^9.3.2",
     "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-photo-gallery": "^8.0.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.0",
     "save": "^2.4.0",
     "semantic-ui-react": "^0.87.3"
